# luceo

./: .gitmodules  Cargo.toml  README.md  shell.nix
fractalide/: Cargo.toml
fractalide/src/: main.rs  state.rs
fractalide/src/gui/: mod.rs
frive/: Cargo.toml
frive/src/: main.rs
frive/src/copernica/: manage.rs  mod.rs  settings.rs
frive/src/luceo/: mod.rs  receive.rs  send.rs  settings.rs  summary.rs  transactions.rs  wallet_overview.rs
frive/src/whistle/: create.rs  mod.rs
libfractalide/: Cargo.toml
libfractalide/src/: lib.rs
src/: main.rs  state.rs
src/gui/: mod.rs
src/gui/copernica/: mod.rs
src/gui/identity/: mod.rs  my.rs  theirs.rs
src/gui/luceo/: mod.rs  stakepools.rs  wallet.rs
src/gui/settings/: mod.rs
src/gui/whistle/: mod.rs
