[package]
name = "fractalide"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
libfractalide = { path = "../libfractalide" }
async-std = "1.5.0"
dirs = "2.0.2"
structopt = "0.3.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_widgets = "0.5.0"
qt_ui_tools = "0.5.0"
