[package]
name = "libfractalide"
version = "0.1.0"
authors = ["Stewart Mackenzie <sjm@fractalide.com>"]
edition = "2018"

[dependencies]
glib = { git = "https://github.com/gtk-rs/glib" }
gdk = { git = "https://github.com/gtk-rs/gdk", optional = true }
gtk = { git = "https://github.com/gtk-rs/gtk", optional = true }
gstreamer = { path = "../../gstreamer-rs/gstreamer" }
gstreamer-audio = { path = "../../gstreamer-rs/gstreamer-audio" }
gstreamer-video = { path = "../../gstreamer-rs/gstreamer-video" }
gstreamer-app = { path = "../../gstreamer-rs/gstreamer-app" }
gstreamer-pbutils = { path = "../../gstreamer-rs/gstreamer-pbutils" }
byte-slice-cast = "0.3"
failure = "0.1.0"
